force-app/main/default/objects/Email_Client_Custom_Settings__c/Email_Client_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Email Client Custom Settings</label>
</CustomObject>