force-app/main/default/objects/Email_Client_Custom_Settings__c/fields/Current_Temporary_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Temporary_Parent_Id__c</fullName>
    <label>Current Temporary Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>