force-app/main/default/objects/Email_Client_Custom_Settings__c/fields/Next_Temporary_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Next_Temporary_Parent_Id__c</fullName>
    <label>Next Temporary Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>