force-app/main/default/objects/Email_Client_Custom_Settings__c/fields/Temporary_Parent_Last_Remove_Date__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Parent_Last_Remove_Date__c</fullName>
    <label>Temporary Parent Last Remove Date</label>
    <type>DateTime</type>
</CustomField>